# wasi-faas

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  types.rs
api/src/function/: execution.rs  mod.rs  registration.rs
api/src/worker/: mod.rs
control-plane/: Cargo.toml
control-plane/src/: api_gateway.rs  main.rs  workers.rs
functions-sample/add/: Cargo.toml
functions-sample/add/src/: lib.rs
functions-sample/div/: Cargo.toml
functions-sample/div/src/: lib.rs
functions-sample/hello/src/: main.rs
functions-sample/mul/: Cargo.toml
functions-sample/mul/src/: lib.rs
functions-sample/sub/: Cargo.toml
functions-sample/sub/src/: lib.rs
worker/: Cargo.toml
worker/src/: executor.rs  function.rs  main.rs
