[workspace]
resolver = "2"

members = ["control-plane", "worker", "api"]

exclude = ["functions-sample/hello"]

[workspace.dependencies]
api = { path = "./api" }

anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
derive_more = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = { version = "24" }
wasmtime-wasi = { version = "24" }
