[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
api.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
